<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">Plain Wallpaper</string>
  <!-- Default title for color picker dialog [CHAR LIMIT=30] -->
  <string name="color_picker_default_title">Select a Colour</string>
  <!-- Content description for a color square. -->
  <string name="color_swatch_description">Colour <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
  <!-- Activation -->
  <string name="activate_button">Activate Live Wallpaper</string>
  <!-- Palette names -->
  <string name="palette_material">Material</string>
  <string name="palette_forest">Forest</string>
  <string name="palette_sky">Sky</string>
  <string name="palette_sunset">Sunset</string>
  <string name="palette_city">City</string>
  <string name="palette_reef">Reef</string>
  <string name="custom_color">Custom colour</string>
  <string name="palette_title">or pick from a palette</string>
  <!-- Confirmation -->
  <string name="confirm_button">Use colour</string>
  <string name="color_set">Colour set</string>
  <!-- Colors -->
  <string name="red">Red</string>
  <string name="green">Green</string>
  <string name="blue">Blue</string>
</resources>
