<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    android:paddingBottom="@dimen/vertical_padding"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:orientation="vertical"
      android:background="#80212121"
      android:gravity="center_horizontal"
      android:paddingTop="@dimen/vertical_seekbar_padding"
      android:paddingBottom="@dimen/vertical_seekbar_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      tools:ignore="UselessParent"
      >

    <SeekBar
        android:id="@+id/seekRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_seekbar_padding"
        android:paddingBottom="@dimen/vertical_seekbar_padding"
        />

    <TextView
        android:id="@+id/txtRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:textColor="#FFFFFF"
        />

    <SeekBar
        android:id="@+id/seekGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_seekbar_padding"
        android:paddingBottom="@dimen/vertical_seekbar_padding"
        />

    <TextView
        android:id="@+id/txtGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:textColor="#FFFFFF"
        />

    <SeekBar
        android:id="@+id/seekBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_seekbar_padding"
        android:paddingBottom="@dimen/vertical_seekbar_padding"
        />

    <TextView
        android:id="@+id/txtBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/vertical_padding"
        android:text="@string/confirm_button"
        />

  </LinearLayout>

</FrameLayout>