<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

  <LinearLayout
      android:id="@+id/layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingTop="@dimen/vertical_padding"
      android:paddingBottom="@dimen/vertical_padding"
      android:paddingLeft="@dimen/horizontal_padding"
      android:paddingRight="@dimen/horizontal_padding"
      >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_title"
        android:drawableTop="@drawable/colorbands_128dp"
        android:drawablePadding="@dimen/vertical_padding"
        android:layout_marginBottom="@dimen/vertical_padding"
        />

    <Button
        android:id="@+id/btnCustomColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_color_lens_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_color_lens_24dp"
        android:text="@string/custom_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/vertical_padding"
        android:layout_marginTop="@dimen/vertical_padding"
        android:text="@string/palette_title"
        />

    <TableLayout
        android:id="@+id/tablePalettes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

  </LinearLayout>

</ScrollView>
